feat: firs screen adaptiv done

--- a/dev/index.html
+++ b/dev/index.html
@@ -1,5 +1,6 @@
 @@include('templates/head.html')
 @@include('templates/header.html')
 @@include('templates/first-screen.html')
+@@include('templates/calculation.html')
 @@include('templates/footer.html')
  
